{
  "version": 4,
  "terraform_version": "1.14.7",
  "serial": 25,
  "lineage": "ddb3b50b-3c70-8724-c70a-b68c18256c58",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/329830c6-1c59-49f9-8377-bd44926f83aa/resourceGroups/mlops-vm-rg/providers/Microsoft.Network/networkInterfaces/mlops-vm-nic",
            "internal_domain_name_suffix": "xcogqvnrfx2etfmrlfg4ju5m4f.zrhx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "primary",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/329830c6-1c59-49f9-8377-bd44926f83aa/resourceGroups/mlops-vm-rg/providers/Microsoft.Network/publicIPAddresses/mlops-vm-pip",
                "subnet_id": "/subscriptions/329830c6-1c59-49f9-8377-bd44926f83aa/resourceGroups/mlops-vm-rg/providers/Microsoft.Network/virtualNetworks/mlops-vm-vnet/subnets/mlops-vm-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "switzerlandnorth",
            "mac_address": "00-22-48-61-9D-C9",
            "name": "mlops-vm-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "mlops-vm-rg",
            "virtual_machine_id": "/subscriptions/329830c6-1c59-49f9-8377-bd44926f83aa/resourceGroups/mlops-vm-rg/providers/Microsoft.Compute/virtualMachines/mlops-vm-vm"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "mlops-vm-nic",
            "resource_group_name": "mlops-vm-rg",
            "subscription_id": "329830c6-1c59-49f9-8377-bd44926f83aa"
          },
          "dependencies": [
            "azurerm_public_ip.pip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nic_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/329830c6-1c59-49f9-8377-bd44926f83aa/resourceGroups/mlops-vm-rg/providers/Microsoft.Network/networkInterfaces/mlops-vm-nic|/subscriptions/329830c6-1c59-49f9-8377-bd44926f83aa/resourceGroups/mlops-vm-rg/providers/Microsoft.Network/networkSecurityGroups/mlops-vm-nsg",
            "network_interface_id": "/subscriptions/329830c6-1c59-49f9-8377-bd44926f83aa/resourceGroups/mlops-vm-rg/providers/Microsoft.Network/networkInterfaces/mlops-vm-nic",
            "network_security_group_id": "/subscriptions/329830c6-1c59-49f9-8377-bd44926f83aa/resourceGroups/mlops-vm-rg/providers/Microsoft.Network/networkSecurityGroups/mlops-vm-nsg"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_interface.nic",
            "azurerm_network_security_group.nsg",
            "azurerm_public_ip.pip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/329830c6-1c59-49f9-8377-bd44926f83aa/resourceGroups/mlops-vm-rg/providers/Microsoft.Network/networkSecurityGroups/mlops-vm-nsg",
            "location": "switzerlandnorth",
            "name": "mlops-vm-nsg",
            "resource_group_name": "mlops-vm-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "mlops-vm-nsg",
            "resource_group_name": "mlops-vm-rg",
            "subscription_id": "329830c6-1c59-49f9-8377-bd44926f83aa"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "api_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "8000",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/329830c6-1c59-49f9-8377-bd44926f83aa/resourceGroups/mlops-vm-rg/providers/Microsoft.Network/networkSecurityGroups/mlops-vm-nsg/securityRules/API_HTTP_8000",
            "name": "API_HTTP_8000",
            "network_security_group_name": "mlops-vm-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "mlops-vm-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "API_HTTP_8000",
            "network_security_group_name": "mlops-vm-nsg",
            "resource_group_name": "mlops-vm-rg",
            "subscription_id": "329830c6-1c59-49f9-8377-bd44926f83aa"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "locust_ui",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "8089",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/329830c6-1c59-49f9-8377-bd44926f83aa/resourceGroups/mlops-vm-rg/providers/Microsoft.Network/networkSecurityGroups/mlops-vm-nsg/securityRules/LOCUST_UI_8089",
            "name": "LOCUST_UI_8089",
            "network_security_group_name": "mlops-vm-nsg",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "mlops-vm-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "LOCUST_UI_8089",
            "network_security_group_name": "mlops-vm-nsg",
            "resource_group_name": "mlops-vm-rg",
            "subscription_id": "329830c6-1c59-49f9-8377-bd44926f83aa"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/329830c6-1c59-49f9-8377-bd44926f83aa/resourceGroups/mlops-vm-rg/providers/Microsoft.Network/networkSecurityGroups/mlops-vm-nsg/securityRules/SSH",
            "name": "SSH",
            "network_security_group_name": "mlops-vm-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "mlops-vm-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "SSH",
            "network_security_group_name": "mlops-vm-nsg",
            "resource_group_name": "mlops-vm-rg",
            "subscription_id": "329830c6-1c59-49f9-8377-bd44926f83aa"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/329830c6-1c59-49f9-8377-bd44926f83aa/resourceGroups/mlops-vm-rg/providers/Microsoft.Network/publicIPAddresses/mlops-vm-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.203.209.146",
            "ip_version": "IPv4",
            "location": "switzerlandnorth",
            "name": "mlops-vm-pip",
            "resource_group_name": "mlops-vm-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "mlops-vm-pip",
            "resource_group_name": "mlops-vm-rg",
            "subscription_id": "329830c6-1c59-49f9-8377-bd44926f83aa"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/329830c6-1c59-49f9-8377-bd44926f83aa/resourceGroups/mlops-vm-rg/providers/Microsoft.Network/virtualNetworks/mlops-vm-vnet/subnets/mlops-vm-subnet",
            "name": "mlops-vm-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "mlops-vm-rg",
            "virtual_network_name": "mlops-vm-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "mlops-vm-subnet",
            "resource_group_name": "mlops-vm-rg",
            "subscription_id": "329830c6-1c59-49f9-8377-bd44926f83aa",
            "virtual_network_name": "mlops-vm-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "55689cb8-2db1-49f8-9591-594de4d3ecf5",
            "id": "/subscriptions/329830c6-1c59-49f9-8377-bd44926f83aa/resourceGroups/mlops-vm-rg/providers/Microsoft.Network/virtualNetworks/mlops-vm-vnet",
            "location": "switzerlandnorth",
            "name": "mlops-vm-vnet",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "mlops-vm-rg",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/329830c6-1c59-49f9-8377-bd44926f83aa/resourceGroups/mlops-vm-rg/providers/Microsoft.Network/virtualNetworks/mlops-vm-vnet/subnets/mlops-vm-subnet",
                "name": "mlops-vm-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "mlops-vm-vnet",
            "resource_group_name": "mlops-vm-rg",
            "subscription_id": "329830c6-1c59-49f9-8377-bd44926f83aa"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}